--- a/css/index.scss
+++ b/css/index.scss
@@ -13,10 +13,17 @@ html, body, .container {
   width: 100%;
 }
 
-.content {
-  display: table-cell;
-  vertical-align: middle;
+section {
   text-align: center;
+  width: 100%;
+  &.top {
+    position: fixed;
+    top: 100px;
+  }
+  &.bottom {
+    position: fixed;
+    bottom: 80px;
+  }
 }
 
 /* Elements */
@@ -29,7 +36,7 @@ h1 {
 }
 
 h2 {
-  margin: 30px auto;
+  margin: 20px auto;
 }
 
 h2, p {
