--- a/css/para.scss
+++ b/css/para.scss
@@ -200,6 +200,7 @@ body, html {
 
 body {
   font-family: Roboto, sans-serif;
+  color: #ffffff;
   font-weight: 100;
   background: #DEE1F3;
   line-height: 1;
