--- a/css/home.scss
+++ b/css/home.scss
@@ -7,10 +7,10 @@ body {
 
 .bg.section {
   width: 100%;
-  height: 500px;
+  height: 550px;
   background: no-repeat center center;
   background-size: cover;
-  background-attachment: fixed;
+  background-attachment: scroll;
 }
 
 section {
