--- a/css/index.scss
+++ b/css/index.scss
@@ -6,7 +6,6 @@
 body {
   color: #fafafa;
   background-color: #222;
-  font: 18px/23px "Cantarell", sans-serif;
 }
 
 table {
@@ -28,11 +27,11 @@ h1 {
   font-family: 'Times', serif;
   font-style: italic;
   font-size: 60px;
-  line-height: 1;
 }
 
 h2 {
-  font-family: "Didot", serif;
+  margin: 10px 0 40px;
+  font-family: Georgia, serif;
 }
 
 h1, h2 {
