Revise home page.

--- a/css/home.scss
+++ b/css/home.scss
@@ -1,9 +1,70 @@
 ---
 ---
 
+$link-color: #876;
+
+// Override
+
 body {
   background-color: #faf7f1;
 }
+
+h2 {
+  margin-bottom: 20px;
+  color: $link-color;
+}
+
+.buttons {
+  margin-top: 40px;
+  text-align: center;
+}
+
+.button {
+  color: $link-color;
+  border-color: $link-color;
+}
+
+// Layout
+
+.container {
+  max-width: 1200px;
+  margin: 0 auto;
+}
+
+.table {
+  display: table;
+  width: 100%;
+}
+
+.table-cell {
+  display: table-cell;
+  vertical-align: middle;
+  padding: 40px;
+  .table-cell-inner {
+    margin: 0 auto;
+    max-width: 500px;
+  }
+}
+
+// Photo frame
+
+.photo-frame-cell {
+  display: table-cell;
+  vertical-align: middle;
+  text-align: center;
+  width: 40%;
+}
+
+.photo-frame {
+  margin: 40px;
+  img {
+    width: 100%;
+    height: 100%;
+    box-shadow: 0 0 20px #444;
+  }
+}
+
+// Previous layout
 
 .bg.section {
   width: 100%;
@@ -18,8 +79,5 @@ section {
   .content {
     margin: 0 auto;
     max-width: 640px;
-    p {
-      line-height: 1.8;
-    }
   }
 }
