--- a/css/base.scss
+++ b/css/base.scss
@@ -1,6 +1,8 @@
 ---
 ---
 
+$link-color: #876;
+
 /* Reset */
 
 html, body, h1, h2, p, div, section {
@@ -54,6 +56,7 @@ body {
 
 p {
   margin-bottom: 15px;
+  line-height: 1.8;
 }
 
 .serif p {
@@ -61,7 +64,7 @@ p {
 }
 
 a {
-  color: #876;
+  color: $link-color;
 }
 
 blockquote {
