--- a/css/index.scss
+++ b/css/index.scss
@@ -3,6 +3,10 @@
 
 /* For vertical / horizontal centering */
 
+.container {
+  height: 100vh;
+}
+
 body {
   color: #fafafa;
   background-color: #222;
