noindex for non-index pages

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,6 +18,7 @@
         <link rel="stylesheet" href="/css/index.css">
     {% else %}
         <link rel="stylesheet" href="/css/{{ basename }}.css">
+        <meta name="robots" content="noindex">
     {% endif %}
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <script src="/js/base.js"></script>
